# pycbf

./: .bumpversion.cfg  .gitattributes  .pre-commit-config.yaml  CHANGELOG.rst  make_release.sh  pycbf_wrap.c  pyproject.toml  regenerate_pycbf.py  setup.py
.github/workflows/: build_wheels.yml
newsfragments/: 25.feature  26.misc  27.misc
src/pycbf/: _wrapper.py  img.c
